# crab-messenger

./: .gitignore  Cargo.toml  DockerfileServer  DockerfileWorker  README.md  azure-pipelines-1.yml  diesel.toml  elog.txt  error_out.txt
architecture/class/: client_redux.puml
architecture/component/: client.puml  server.puml  worker.puml
architecture/db/: db.puml
architecture/sequence/: accept-invite.puml  send-invite.puml  simple.puml
architecture/use-case/: auth.puml
docs/diagrams/class/: client_redux.puml  client_state.puml  client_tools.puml  crab_messenger.puml  server.puml  server_facade.puml  total_server_top.puml  total_worker.puml  worker.puml
docs/diagrams/component/: client.puml
docs/diagrams/db/: README.md
docs/diagrams/deploy/: deployment.puml
docs/diagrams/sequence/: send-message.puml
docs/diagrams/use-case/: README.md  messenger.puml
migrations/2023-11-05-030105_users/: down.sql  up.sql
migrations/2023-11-05-042823_chats/: down.sql  up.sql
migrations/2023-11-05-044301_messages/: down.sql  up.sql
migrations/2023-11-05-082611_invites/: down.sql  up.sql
migrations/2023-11-05-082821_users_chats/: down.sql  up.sql
pipelines/: test-all.yml
protos/: messenger.proto
src/: auth.rs  client.rs  lib.rs  server.rs  utils.rs  worker.rs
src/auth/: auth_error.rs  auth_impl.rs
src/client/: input.rs  redux.rs  view.rs
src/client/redux/: action.rs  actions.rs  reducers.rs  state.rs  store.rs
src/client/redux/reducers/: app.rs
src/client/redux/reducers/app/: chats.rs  login.rs  messages.rs  server.rs  typing.rs
src/client/redux/state/: client_chat.rs  tab.rs
src/client/redux/store/: store_impl.rs
src/client/view/: app.rs
src/client/view/app/: chats_container.rs  controls.rs  home.rs  login.rs  tab.rs  users.rs
src/client/view/app/chats_container/: chats.rs  messages.rs  typing.rs
src/server/: auth_interceptor.rs  chat_manager.rs  crab_messenger.rs
src/server/chat_manager/: message_consumer.rs
src/server/crab_messenger/: chat_manager.rs  invite_manager.rs  message_consumer.rs  message_manager.rs  user_manager.rs
src/server/crab_messenger/invite_manager/: invite_consumer.rs
src/server/crab_messenger/message_manager/: connect_consumer.rs  message_consumer.rs  message_stream_handler.rs
src/server/persistence/: chat.rs  invite.rs  message.rs  user.rs  users_chats.rs
src/utils/: auth.rs  db_connection_manager.rs  messenger.rs  persistence.rs  rabbit_channel_manager.rs  rabbit_declares.rs  rabbit_types.rs
src/utils/auth/: auth_impl.rs  token.rs
src/utils/persistence/: chat.rs  invite.rs  message.rs  schema.rs  user.rs  users_chats.rs
src/worker/: accept_invite_consumer.rs  new_message_consumer.rs  send_invite_consumer.rs
