[package]
name = "crab-messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.6"
reqwest = { version = "0.11.22", features = ["json"] }
shaku = "0.6.1"
async-trait = "0.1.73"
serde = "1.0.188"
serde_json = "1.0.107"
crossterm = { version = "0.27.0", features = ['serde'] }
ratatui = { version = "0.21", default-features = false, features = ['crossterm', 'serde'] }
crossbeam-channel = { version = "0.5.8", features = [] }
anyhow = "1.0.75"


[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"

[[bin]]
name = "client"

[[bin]]
name = "playground"
