[package]
name = "crab-messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["codegen"] }
prost = "0.12.1"
reqwest = { version = "0.11.22", features = ["json"] }
shaku = "0.6.1"
async-trait = "0.1.73"
serde = "1.0.188"
serde_json = "1.0.107"
crossterm = { version = "0.27.0", features = ['serde'] }
ratatui = { version = "0.24.0", features = ['crossterm', 'serde'] }
crossbeam-channel = { version = "0.5.8", features = [] }
anyhow = "1.0.75"
scopeguard = "1.2.0"
open = "5.0.0"
ctrlc = "3.4.1"
diesel = { version = "2.1.3", features = ['postgres', 'chrono', 'r2d2'] }
chrono = { version = "0.4.31", features = ['serde'] }
prost-types = "0.12.1"
futures-core = "0.3.29"
dotenv = "0.15.0"
amqprs = "1.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
r2d2 = "0.8.10"
futures = "0.3.29"
rand = "0.8.5"
tokio-stream = { version = "0.1.14", features = [] }
headers = "0.4.0"
jsonwebtoken = "9.2.0"
url = "2.4.1"
tonic-async-interceptor = "0.10.0"
dotenv_codegen = "0.15.0"


[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"

[[bin]]
name = "client"

[[bin]]
name = "worker"

[[bin]]
name = "playground"

[[bin]]
name = "bunny-publish"

[[bin]]
name = "bunny-recieve"

[[bin]]
name = "test-users"

[[bin]]
name = "test-get-messages"

[[bin]]
name = "simple-client"

[[bin]]
name = "test-get-my-chats"

[[bin]]
name = "test-get-related-users"

[[bin]]
name = "test-send-invite"

[[bin]]
name = "test-invites"

[[bin]]
name = "test-get-invites"

[[bin]]
name = "test-decline-invite"

[[bin]]
name = "test-accept-invite"

[[bin]]
name = "test-create-chat"

[[bin]]
name = "env-playground"
